# nasm-clang-boilerplate

./: CMakeLists.txt  README.md  local-build.cmd
src/asm/: getnumber.asm
src/cpp/: main.cpp
